# MapShift

./: .gitignore  ARTIFACT_EVALUATION.md  CITATION.cff  LICENSE  README.md  THIRD_PARTY_LICENSES.md  paper.tex  pyproject.toml  requirements-lock.txt
.github/workflows/: mapshift-2d-ci.yml
configs/analysis/: mapshift_2d_belief_update_diagnostic_full_protocols_v0_1.json  mapshift_2d_belief_update_diagnostic_v0_1.json  mapshift_2d_full_study_smoke_v0_1.json  mapshift_2d_full_study_v0_1.json  mapshift_2d_main_cep_only_v0_1.json  mapshift_2d_stale_map_diagnostic_smoke_v0_1.json  mapshift_2d_stale_map_diagnostic_v0_1.json  release_v0_1.json
configs/baselines/: release_v0_1.json
configs/benchmark/: release_v0_1.json
configs/calibration/: classical_belief_update_planner_v0_1.json  monolithic_recurrent_world_model_v0_1.json  oracle_post_intervention_planner_v0_1.json  persistent_memory_world_model_large_v0_1.json  persistent_memory_world_model_v0_1.json  pretrained_structured_graph_world_model_1m_v0_1.json  stale_map_planner_v0_1.json  (+8 more)
docs/: IMPLEMENTATION_PLAN.md  README.md  benchmark_spec.md  evaluation_card.md  release_checklist.md  release_freeze_v0_1.md
mapshift/: __init__.py
outputs/: README.md
scripts/: analyze_mechanism_diagnostic.py  audit_artifact.py  build_benchmark.py  export_release.py  generate_benchmark_health.py  generate_calibration_report.py  generate_release_splits.py  render_paper_outputs.py  run_eval.py  run_mapshift_2d_study.py  run_minigrid_cpe_study.py  run_protocol_comparison.py  smoke_map2d.py  smoke_minigrid_port.py  smoke_procthor.py  validate_benchmark.py
tests/: __init__.py
(+108 files in other folders)
