[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mapshift"
version = "0.1.0"
description = "Frozen MapShift-2D benchmark release for Counterfactual Embodied Planning evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MapShift Authors" }]
dependencies = [
    "numpy>=1.26,<3.0",
    "torch>=2.2,<3.0",
]

[tool.setuptools.packages.find]
include = ["mapshift*"]
